--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,51 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="errors" style="
+      background: #c00;
+      color: #fff;
+      display: none;
+      margin: -20px -20px 20px;
+      padding: 20px;
+      white-space: pre-wrap;
+    "></div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script>
+      const errors = document.getElementById('errors');
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      window.addEventListener('mousedown', (e) => {
+        document.body.classList.add('mouse-navigation');
+        document.body.classList.remove('kbd-navigation');
+      });
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      window.addEventListener('keydown', (e) => {
+        if (e.keyCode === 9) {
+          document.body.classList.add('kbd-navigation');
+          document.body.classList.remove('mouse-navigation');
+        }
+      })
+
+      window.addEventListener('click', (e) => {
+        // If a link is clicked...
+        if (e.target.tagName === 'A' && e.target.getAttribute('href') === '#') {
+          e.preventDefault();
+        }
+      })
+
+      window.onerror = (message, source, line, col, error) => {
+        const text = error ? error.stack || error : `${message} (at ${source}:${line}:${col})`;
+        
+        errors.textContent += `${text}\n`;
+        errors.style.display = '';
+      }
+
+      console.error = ((old) => {
+        return function error() {
+          errors.textContent += Array.prototype.slice.call(arguments).join(' ') + '\n';
+          errors.style.display = '';
+          old.apply(this, arguments);
+        }
+      })(console.error);
+    </script>
   </body>
 </html>
